# adr-runtime

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SCOPE.md  SPEC.md
.github/workflows/: ci.yml
crates/adr-core/: Cargo.toml
crates/adr-layer2/: Cargo.toml
crates/adr-layer2/src/: lib.rs  policy.rs  policy_engine.rs  resolver.rs  types.rs
crates/adr-layer2/tests/: e2e_smoke.rs  policy_engine.rs
docs/: ADR_DESIGN_PRINCIPLES.md  ARCHITECTURE.md  PROJECT_VISION.md  ROADMAP.md  SAFETY_MODEL.md  THREAT_MODEL.md
docs/adr/: 0001-layer-boundary.md  0002-capability-enforcement-in-executor.md  0003-audit-log-hash-chain.md  0004-capability-representation.md  0005-effect-policy-boundary.md  README.md
docs/dialog/: 20260225_1300_KI_Sprache_Claude_Ideen_Clause.docx  20260225_1305_ChatGPT_KI_Sprache_Ideen.docx  20260225_1320_Claude_KI_Sprache_Phase2.docx  20260225_1340_ChatGPT_KI_Sprache_Ideen.docx  20260225_1355_ChatGPT_KI_Sprache_Ideen.docx  20260225_1357_Claude_ADR_Spec_Phase3 - umgeschieben.docx  20260225_1425_ChatGPT_KI_Sprache_Ideen.docx  20260225_1440_Claude_ADR_Phase4_v03.docx  20260225_1505_ChatGPT_KI_Sprache_Ideen.docx  20260225_1520_Claude_ADR_Phase5_v04.docx  20260225_1535_ChatGPT_KI_Sprache_Ideen.docx  20260225_1545_Claude_ADR_Phase6_v05.docx  20260225_1600_ChatGPT_KI_Sprache_Ideen.docx  20260225_1610_Claude_Reaktion_Phase6.docx  20260225_1620_ChatGPT_KI_Sprache_Ideen.docx  20260225_1630_Claude_Vorbereitung_Phase7.docx  20260302_2245_ChatGPT_KI_Sprache_Ideen.docx  20260302_2300_Claude_Review_Phase13.docx  20260302_2315_Claude_Code_Review_Phase13.docx  20260311_2204_ChatGPT_KI_Sprache_Ideen_Phase14_15.md  20260312_2114_ChatGPT_Phase16_Policy_Skeleton.md  20260312_2115_Claude_Response_Phase16.md  20260313_2043_ChatGPT_Phase16_Update_TrustTier.md  (+27 more)
governance/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
(+16 files in other folders)
