[package]
name        = "adr-layer2"
version     = "0.1.0"
edition     = "2021"
description = "ADR Layer 2 – Intent, Policy, Resolver (declarative logic)"
license     = "MIT"
authors     = ["ADR Runtime Contributors"]

[dependencies]
# serde for JSON serialisation of Graph-IR and policy.yaml
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
uuid        = { version = "1", features = ["serde", "v4"] }

# adr-core will be a sibling crate once Layer 1 skeleton is ready
# adr-core = { path = "../adr-core" }

[dev-dependencies]
# For unit tests
